fix overflow caused by sr-only

--- a/src/components/ButtonRow/ButtonRow.module.css
+++ b/src/components/ButtonRow/ButtonRow.module.css
@@ -1,4 +1,7 @@
 .buttonRow {
+  /* fix overflow caused by sr-only */
+  position: relative;
+
   white-space: nowrap;
   overflow-x: auto;
 
